<resources>
    <string name="app_name">BMI Checker</string>
    <string name="weight">Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="version">BMI_Checker_V_0.0.4</string>
    <string name="good_day">Good Day</string>
    <string name="github_link"><a Uri="https://github.com/joymridha2004">github.com/joymridha2004</a></string>
</resources>